# pico_neopixel_controller

./: .gitignore  CMakeLists.txt
include/: basic_math.h  command_processor.h  datatypes.h  default_params.h  led_array.h  led_commander.h  neopixel.h  pattern.h
src/: basic_math.c  command_processor.c  led_commander.c  main.c  neopixel.c  pattern.c  ws2812b.pio
